# python-foundations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
base/common/: containers.py  settings.py
base/common/adapters/gateways/: __init__.py  common.py  sqs.py
base/common/adapters/stores/: __init__.py  common.py  dynamo.py  mongo.py  postgres.py
base/common/endpoints/: __init__.py
base/common/endpoints/api/: __init__.py  api_endpoint.py  api_exception_handlers.py  create.py
base/common/endpoints/api/security/: __init__.py  general.py
base/common/endpoints/api/utils/: logging.py  timer.py
base/common/endpoints/direct/: aws_direct_entities.py  create.py  direct_endpoint.py
base/common/endpoints/direct/security/: common.py
base/common/endpoints/security/: __init__.py
base/common/entities/: __init__.py  sorting.py
base/common/usecases/: __init__.py
base/common/utils/: __init__.py  context.py  logger.py
base/tests/utils/: __init__.py  dynamo.py  mongo.py  postgres.py
example_app/: .env.example  Makefile  docker-compose.yml  main.py  settings.py
example_app/adapters/gateways/: __init__.py  g_entity.py
example_app/adapters/stores/: __init__.py  s_entity.py
example_app/endpoints/api/: __init__.py  a_example.py
example_app/migrations/: 01_example_table.down.sql  01_example_table.up.sql
example_app/usecases/: get_example.py
example_app/usecases/dto/: example.py
tests/: conftest.py  test_main.py
